--- a/SmlTestTask.Tests/SmlTestTask.Tests.csproj
+++ b/SmlTestTask.Tests/SmlTestTask.Tests.csproj
@@ -1,9 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
 
     <IsPackable>false</IsPackable>
+
+    <Configurations>Debug;Release;Test</Configurations>
   </PropertyGroup>
 
   <ItemGroup>
@@ -11,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="3.1.17" />
     <PackageReference Include="Moq" Version="4.16.1" />
     <PackageReference Include="NUnit" Version="3.12.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.16.1" />
@@ -21,7 +24,7 @@
     <ProjectReference Include="..\BLL.Interface\BLL.Interface.csproj" />
     <ProjectReference Include="..\BLL.Local\BLL.Local.csproj" />
     <ProjectReference Include="..\BLL.Stub\BLL.Stub.csproj" />
-    <ProjectReference Include="..\ReactApplication\ReactApplication.csproj" />
+    <ProjectReference Include="..\SmlTestTask\SmlTestTask.csproj" />
   </ItemGroup>
 
 </Project>
