--- a/SmlTestTask/appsettings.json
+++ b/SmlTestTask/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ClientAppUrl": "http://194.87.102.173:3000",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=194.87.102.173;Port=5432;Database=testrest;Username=postgres;Password=admin123;Persist Security Info=true"
+    "DefaultConnection": "Host=194.87.102.173;Port=5432;Database=testrest;Username=demo1;Password=demo0804;Persist Security Info=true"
   },
   "Logging": {
     "LogLevel": {
